--- a/pkg/apis/akash.network/v1/crd.yaml
+++ b/pkg/apis/akash.network/v1/crd.yaml
@@ -81,7 +81,7 @@ spec:
                                 port:
                                   type: integer
                                   format: uint16
-                                external-port:
+                                external_port:
                                   type: integer
                                   format: uint16
                                 proto:
